--- a/argocd/apps/homepage/kustomization.yaml
+++ b/argocd/apps/homepage/kustomization.yaml
@@ -4,8 +4,19 @@ kind: Kustomization
 generators:
   - ./manifests/secret-generator.yaml
 
+configMapGenerator:
+  - name: config
+    files:
+      - ./manifests/config/bookmarks.yaml
+      - ./manifests/config/custom.css
+      - ./manifests/config/custom.js
+      - ./manifests/config/docker.yaml
+      - ./manifests/config/kubernetes.yaml
+      - ./manifests/config/services.yaml
+      - ./manifests/config/settings.yaml
+      - ./manifests/config/widgets.yaml
+
 resources:
-  - ./manifests/cm.yaml
   - ./manifests/deploy.yaml
   - ./manifests/svc.yaml
   - ./manifests/http-route.yaml
