--- a/argocd/apps/nextcloud/manifests/http-route.yaml
+++ b/argocd/apps/nextcloud/manifests/http-route.yaml
@@ -4,7 +4,12 @@ metadata:
   labels:
     app.kubernetes.io/instance: nextcloud-app
   name: nextcloud-httproute
-  namespace: nextcloud
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: Nextcloud
+    gethomepage.dev/icon: nextcloud
+    gethomepage.dev/description: "Nextcloud is a suite of client-server software for creating and using file hosting services."
+    gethomepage.dev/pod-selector: app.kubernetes.io/name=nextcloud
 spec:
   parentRefs:
     - name: gateway-api
