--- a/argocd/apps/change-detection/httproute.yaml
+++ b/argocd/apps/change-detection/httproute.yaml
@@ -2,7 +2,11 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   annotations:
-    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: Change Detection
+    gethomepage.dev/icon: sh-changedetection
+    gethomepage.dev/description: "Detect website content changes and perform meaningful actions."
+    gethomepage.dev/pod-selector: app=change-detection
   labels:
     app.kubernetes.io/instance: change-detection-app
   name: change-httproute
