--- a/argocd/apps/homebox/http-route.yaml
+++ b/argocd/apps/homebox/http-route.yaml
@@ -2,7 +2,11 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   annotations:
-    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
+    gethomepage.dev/enabled: 'true'
+    gethomepage.dev/name: Homebox
+    gethomepage.dev/icon: homebox
+    gethomepage.dev/description: 'HomeBox is the inventory and organization system built for the Home User!'
+    gethomepage.dev/pod-selector: app=homebox
   labels:
     app.kubernetes.io/instance: homebox-app
   name: homebox-http-route
