--- a/argocd/apps/homepage/manifests/deploy.yaml
+++ b/argocd/apps/homepage/manifests/deploy.yaml
@@ -63,6 +63,6 @@ spec:
       volumes:
         - name: homepage-config
           configMap:
-            name: homepage
+            name: config
         - name: logs
           emptyDir: {}
