--- a/argocd/apps/infra/monitoring/kiali/http-route.yaml
+++ b/argocd/apps/infra/monitoring/kiali/http-route.yaml
@@ -2,7 +2,11 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   annotations:
-    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: Kiali
+    gethomepage.dev/icon: mdi-network-pos
+    gethomepage.dev/description: "Kiali is a management console for Istio service mesh."
+    gethomepage.dev/pod-selector: app.kubernetes.io/name=kiali
   labels:
     app.kubernetes.io/instance: kiali-app
   name: kiali-httproute
