--- a/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
@@ -2,10 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - manifests/http-route.yaml
+  - ./manifests/http-route.yaml
 
 generators:
-  - manifests/secret-generator.yaml
+  - ./manifests/secret-generator.yaml
 
 helmCharts:
   - name: victoria-metrics-k8s-stack
