--- a/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/http-route.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/http-route.yaml
@@ -3,8 +3,13 @@ kind: HTTPRoute
 metadata:
   labels:
     app.kubernetes.io/instance: monitoring-app
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: VictoriaMetrics
+    gethomepage.dev/icon: victoriametrics
+    gethomepage.dev/description: "VictoriaMetrics is a fast, cost-effective monitoring solution and time series database."
+    gethomepage.dev/pod-selector: app.kubernetes.io/name=vmsingle
   name: vm-httproute
-  namespace: monitoring
 spec:
   parentRefs:
     - name: gateway-api
@@ -21,10 +26,13 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  labels:
-    app.kubernetes.io/instance: monitoring-app
   name: grafana-httproute
-  namespace: monitoring
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: Grafana
+    gethomepage.dev/icon: grafana
+    gethomepage.dev/description: "Grafana is a multi-platform open source analytics and interactive visualization web application."
+    gethomepage.dev/pod-selector: app.kubernetes.io/name=grafana
 spec:
   parentRefs:
     - name: gateway-api
