--- a/argocd/apps/infra/myspeed/http-route.yaml
+++ b/argocd/apps/infra/myspeed/http-route.yaml
@@ -2,7 +2,11 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   annotations:
-    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: MySpeed
+    gethomepage.dev/icon: myspeed
+    gethomepage.dev/description: "MySpeed is a speed test analysis software that records your internet speed for up to 30 days."
+    gethomepage.dev/pod-selector: app=myspeed
   labels:
     app.kubernetes.io/instance: myspeed-app
   name: myspeed-http-route
