--- a/argocd/apps/infra/storage/minio/manifests/http-route.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/http-route.yaml
@@ -2,11 +2,14 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   annotations:
-    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: MinIO
+    gethomepage.dev/icon: minio
+    gethomepage.dev/description: "MinIO Is The Most Reliable Object Storage Solution For On-Premise Deployments."
+    gethomepage.dev/pod-selector: v1.min.io/console=myminio-console
   labels:
     app.kubernetes.io/instance: minio-app
   name: minio-httproute
-  namespace: minio
 spec:
   parentRefs:
   - name: gateway-api
@@ -17,7 +20,6 @@ spec:
   rules:
   - backendRefs:
     - name: myminio-console
-      namespace: minio
       port: 9090
       
 ---
@@ -29,7 +31,6 @@ metadata:
   labels:
     app.kubernetes.io/instance: minio-app
   name: minio-api-httproute
-  namespace: minio
 spec:
   parentRefs:
   - name: gateway-api
@@ -40,6 +41,5 @@ spec:
   rules:
   - backendRefs:
     - name: minio
-      namespace: minio
       port: 80
       
