--- a/argocd/apps/media-server/overseerr/http-route.yaml
+++ b/argocd/apps/media-server/overseerr/http-route.yaml
@@ -2,7 +2,11 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   annotations:
-    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: Overseerr
+    gethomepage.dev/icon: overseerr
+    gethomepage.dev/description: "Overseerr is a free and open source software application for managing requests for your media library."
+    gethomepage.dev/pod-selector: app=overseerr
   labels:
     app.kubernetes.io/instance: overseerr-app
   name: overseerr-vs-idx-0
