--- a/argocd/apps/media-server/plex/http-route.yaml
+++ b/argocd/apps/media-server/plex/http-route.yaml
@@ -2,7 +2,12 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: plex-http-route
-  namespace: plex
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: Plex
+    gethomepage.dev/icon: plex
+    gethomepage.dev/description: "A one-stop destination to stream movies, TV shows, and music."
+    gethomepage.dev/pod-selector: app=plex
 spec:
   parentRefs:
   - name: gateway-api
