--- a/argocd/apps/media-server/prowlarr/http-route.yaml
+++ b/argocd/apps/media-server/prowlarr/http-route.yaml
@@ -2,7 +2,11 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   annotations:
-    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: Prowlarr
+    gethomepage.dev/icon: prowlarr
+    gethomepage.dev/description: "Prowlarr is an indexer manager/proxy built on the popular *arr .net/reactjs base stack to integrate with your various PVR apps."
+    gethomepage.dev/pod-selector: app=prowlarr
   labels:
     app.kubernetes.io/instance: prowlarr-app
   name: prowlarr-httproute
