--- a/argocd/apps/media-server/sonarr/deploy.yaml
+++ b/argocd/apps/media-server/sonarr/deploy.yaml
@@ -1,11 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose -f sonarr.yaml convert
-    kompose.version: 1.35.0 (HEAD)
   labels:
     io.kompose.service: sonarr
+    app: sonarr
   name: sonarr
 spec:
   replicas: 1
@@ -24,6 +22,7 @@ spec:
         kompose.version: 1.35.0 (HEAD)
       labels:
         io.kompose.service: sonarr
+        app: sonarr
     spec:
       affinity:
         nodeAffinity:
