--- a/argocd/apps/media-server/sonarr/http-route.yaml
+++ b/argocd/apps/media-server/sonarr/http-route.yaml
@@ -2,6 +2,12 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: sonarr-httproute
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: Sonarr
+    gethomepage.dev/icon: sonarr
+    gethomepage.dev/description: "Smart PVR for newsgroup and bittorrent users."
+    gethomepage.dev/pod-selector: app=sonarr
 spec:
   parentRefs:
   - name: gateway-api
