--- a/argocd/apps/media-server/tautulli/http-route.yaml
+++ b/argocd/apps/media-server/tautulli/http-route.yaml
@@ -2,6 +2,12 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: tautulli-httproute
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: Tautulli
+    gethomepage.dev/icon: tautulli
+    gethomepage.dev/description: "A python based web application for monitoring, analytics and notifications for Plex Media Server."
+    gethomepage.dev/pod-selector: app=tautulli
 spec:
   parentRefs:
   - name: gateway-api
