--- a/argocd/apps/resume/manifests/http-route.yaml
+++ b/argocd/apps/resume/manifests/http-route.yaml
@@ -1,38 +1,15 @@
-# apiVersion: gateway.networking.k8s.io/v1
-# kind: HTTPRoute
-# metadata:
-#   annotations:
-#   labels:
-#     app.kubernetes.io/instance: resume-app
-#   name: resume-httproute
-#   namespace: resume
-# spec:
-#   parentRefs:
-#     - name: gateway-api
-#       namespace: istio-system
-#       sectionName: https
-#   hostnames:
-#     - rxresume.yanello.net
-#     - resume.yanello.net
-#   rules:
-#     - backendRefs:
-#         - name: rx-resume
-#           namespace: resume
-#           port: 3010
-#       matches:
-#         - path:
-#             type: PathPrefix
-#             value: /marcus/latest
-# ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   annotations:
-    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: RxResume
+    gethomepage.dev/icon: sh-reactive-resume
+    gethomepage.dev/description: "A free and open-source resume builder that simplifies the process of creating, updating, and sharing your resume. "
+    gethomepage.dev/pod-selector: app=rx-resume
   labels:
     app.kubernetes.io/instance: resume-app
   name: resume-httproute
-  namespace: resume
 spec:
   parentRefs:
     - name: gateway-api
