--- a/argocd/apps/ytdl/manifests/deploy.yaml
+++ b/argocd/apps/ytdl/manifests/deploy.yaml
@@ -15,6 +15,8 @@ spec:
   template:
     metadata:
       name: ytdl
+      labels:
+        app: ytdl
     spec:
       initContainers:
         - name: wait-for-mongodb
@@ -126,7 +128,7 @@ spec:
                     values:
                       - amd64
       containers:
-        - image: mongo:8.0.5@sha256:7bd28e5eea1c5766a084d5818254046f3ebe3b8f20a65e3a274640189e296667
+        - image: mongo:8.0.6@sha256:1cb283500219e8fc0b61b328ea5a199a395a753d88b17351c58874fb425223cb
           name: ytdl-mongo-db
           resources:
             limits:
