--- a/argocd/apps/homepage/manifests/cm.yaml
+++ b/argocd/apps/homepage/manifests/cm.yaml
@@ -65,3 +65,5 @@ data:
         suggestionUrl: https://kagi.com/api/autosuggest?q=
         url: https://kagi.com/search?q=%s
         target: _blank
+
+  docker.yaml: ""
