--- a/argocd/apps/homepage/kustomization.yaml
+++ b/argocd/apps/homepage/kustomization.yaml
@@ -4,6 +4,11 @@ kind: Kustomization
 generators:
   - ./manifests/secret-generator.yaml
 
+configMapGenerator:
+  - name: bookmarks
+    files:
+      - ./manifests/config/bookmarks.yaml
+
 resources:
   - ./manifests/cm.yaml
   - ./manifests/deploy.yaml
