--- a/argocd/apps/homepage/manifests/deploy.yaml
+++ b/argocd/apps/homepage/manifests/deploy.yaml
@@ -42,7 +42,7 @@ spec:
               subPath: custom.css
             - mountPath: /app/config/bookmarks.yaml
               name: bookmarks
-              #subPath: bookmarks.yaml
+              subPath: bookmarks.yaml
             - mountPath: /app/config/docker.yaml
               name: homepage-config
               subPath: docker.yaml
@@ -63,6 +63,9 @@ spec:
       volumes:
         - name: homepage-config
           configMap:
-            name: homepage         
+            name: homepage
+        - name: bookmarks
+          configMap:
+            name: bookmarks
         - name: logs
           emptyDir: {}
