--- a/argocd/apps/homepage/manifests/deploy.yaml
+++ b/argocd/apps/homepage/manifests/deploy.yaml
@@ -63,9 +63,6 @@ spec:
       volumes:
         - name: homepage-config
           configMap:
-            name: homepage
-        - name: bookmarks
-          configMap:
-            name: bookmarks
+            name: config
         - name: logs
           emptyDir: {}
