--- a/argocd/apps/homepage/manifests/secrets.yaml
+++ b/argocd/apps/homepage/manifests/secrets.yaml
@@ -6,6 +6,7 @@ type: Opaque
 stringData:
     HOMEPAGE_VAR_OPN_USER: ENC[AES256_GCM,data:fvxR3ZhDwjmihH/ca2YnLwJew1XBYU7jRNMkE1rgcdMN6Dso4bwzul5Ad9bVSH+2PQF7B19WXfLKCmd2t6eF+o5f3vSa3ZTAu/AOqaAh8rk=,iv:tqqbioDATJv39l79jGUWJcmchpH117qBDeaGm177sxo=,tag:nPZALgBG5fFVQqd3uRUt5w==,type:str]
     HOMEPAGE_VAR_OPN_PASS: ENC[AES256_GCM,data:n69n/BKaVWYQ8DKiYpqY8ex0el1ctc+MrWc3YTP0QfS8xJPPewFTGn88VbcGH3fgvGZhu+JIAogcWTxkvfl+1Kip5OrKFjQRJ48DmJkm7+g=,iv:cxjwuFbHuMuyyudzBZxUk9uu5rvMmCuFxdY0gbv0+Bs=,tag:KewU3fo+F6eqANaKo9OhaQ==,type:str]
+    HOMEPAGE_VAR_VAUTULLI_KEY: ENC[AES256_GCM,data:pcFcM26O5HjJdingrvNu5TjsAWvABoEpP3cOec+B4hY=,iv:ys1WO/AVSt/xCm16NV04LbN+1AYsZGohfDwC+pBHx58=,tag:mLBmqDy4DlA4nFzKYcKGtQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-19T14:06:15Z"
-    mac: ENC[AES256_GCM,data:7Q/2K2MdISm2BTBcuEbOBGi7I9BTZD7QEpgeqvBe301JlCsyFLREs4n18xGTeFYUj2LwGVaNP6TVaFmNA0jmoDJqSZ/kcj4xJxZOGUSby0rV1QeXPIL1rCHJqgY0WST+JQvVJldUE9+lQzWYd525ecJS8bJrD0AMem1dXtNvvaI=,iv:/L2aSVaxpUoi78dIupGyZDTdKjlR5ZLy8TKyF4sobgg=,tag:53L6slncip4dE8w3n7hczg==,type:str]
+    lastmodified: "2025-03-24T22:05:09Z"
+    mac: ENC[AES256_GCM,data:Zd4UinVilFvpbHDd2YFJ/jk1MlS8aJHPDftblo0yvt1nKjWsYX2IYvpuNCM61gBPs7/CKlJak3tVX6+LPZleQSS3E4Xj+12Egh9nj1giABSbyw0zaWQh/81rlT/9nrUT59H5mdffaLMvyNdc/a178o8tRuOoDifL/6pB0eZsTaQ=,iv:eyZALe8k2EXbqvaN3y89oV4+JZa5jZ+Z+JaSyEszI1M=,tag:sjEKMkZNdvCoizYReOmoZQ==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
