--- a/argocd/apps/homepage/manifests/config/services.yaml
+++ b/argocd/apps/homepage/manifests/config/services.yaml
@@ -24,7 +24,7 @@
           enableUser: 'true'
           showEpisodeNumber: 'true'
     - qBittorrent:
-        href: https://qb.yanello.net
+        href: https://qbit.yanello.net
         icon: qbittorrent
         widget:
           type: qbittorrent
