--- a/argocd/apps/homebox/http-route.yaml
+++ b/argocd/apps/homebox/http-route.yaml
@@ -2,7 +2,8 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   annotations:
-    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
+    gethomepage.dev/enabled: 'true'
+    gethomepage.dev/name: homebox
   labels:
     app.kubernetes.io/instance: homebox-app
   name: homebox-http-route
