--- a/argocd/apps/mealie/manifests/secrets.yaml
+++ b/argocd/apps/mealie/manifests/secrets.yaml
@@ -11,6 +11,9 @@ stringData:
     POSTGRES_SERVER: ENC[AES256_GCM,data:EUtT9cfmTJA=,iv:bxb7rNZVqL3iu3FYqqfSCvHJ2Au43BIYmMDtIYIWc1A=,tag:gU3PLXQh8HAGuxLlFiobsA==,type:str]
     POSTGRES_PORT: ENC[AES256_GCM,data:e5UOXw==,iv:pzPSIgldN1EfdCxuvVB8he1afnWV0qmaSedwiZK/Fpc=,tag:KhOHfL8l1csqTvo0kEDm4w==,type:str]
     POSTGRES_DB: ENC[AES256_GCM,data:LSE0xLCY,iv:Q7EfQyDgPVS1HKuyNap4g7MVLoK4RBAHJH3RKGpMLhw=,tag:lUT1tmEC6Rwu4NGjSub6QA==,type:str]
+    OIDC_CONFIGURATION_URL: ENC[AES256_GCM,data:mi/370syY/7pwkWiD6hPTmmVjTZNOsmqG/VItn8J28F0IzpsZlwTKtV9+Hji+iALkIjIJFfdfCVNp8Vur26P2Hm+N/+jpeIVx6dH+QKbh0WBdgw=,iv:2DYz6wA0S5d+oiNgQj0N5MRxICiUd1OfQX03K0Ry8Y8=,tag:XPWmw2ogqMHqqaRLIYvMvw==,type:str]
+    OIDC_CLIENT_ID: ENC[AES256_GCM,data:8tAc6Z8ANNEmqrEXFytKk8hUCN7fI2/Il7ZxwwsQKMoBPhGk44oVMg==,iv:j9Svxc/U+BZcHHHx2xtpF3vUfxQcmstfrCSbXM7+Y/g=,tag:HMByvSUVq6sPPmgvuSKPeQ==,type:str]
+    OIDC_CLIENT_SECRET: ENC[AES256_GCM,data:GVds+/RW5403aVoVI6tXA1yDmuGcm9CtotwRjKx1PLRczrc4otPKDh9clHPfI8KpRkrI5bTLlIoKoBxO4owOV+Q3oBLpe4IzErSURsFxC6jlPKLc5Y2uBJKQj6YpTEiskxGzgdidfA5vgmj7/yNzOfwI7WUaUxIbgYXyyh09LwQ=,iv:H/M8lPW4N0dGKFIMrevBeEgsHf3+u81HLsTfKC6UFjg=,tag:ByaAv41ZvhRwSStBxYehHg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +29,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-14T14:29:33Z"
-    mac: ENC[AES256_GCM,data:4rnRC44ot9nT+UeJZU+0W+6roGRhGoGJK2/5rBC1Ibf4WAmZe8OUCtiZhGeSxhm4/HNLguSjkMRxUvDv1hUozE5DTqGnNdaFpwbjzF+opJLed3M0HGbtgy5StpaYdruJlcNjADj28M4OvN5qUKA9KejgnCPXF1UbZ5jZsVWSZP0=,iv:qsiJwm44imqZi38+Evfj4l5KTFBglGwj6jKcgVjdnNE=,tag:rxGPCgiNc7NlIS3a66kaGg==,type:str]
+    lastmodified: "2025-03-25T01:41:03Z"
+    mac: ENC[AES256_GCM,data:M8S3Ghz0kP/G5THqXG7423E8a+mhWQQaANu0IWHtz79x6QgDbM5KAz7IzQBzd45gIH2guf+JZ2Yu774I2hhSsDtxODAYLfDXHIbNcZABJS+DbAYkqL8sQZAT5GdFZ11Hlxegbg1knzkbafHdVs3oSF3tYgkEBZioLaeB1WfB6YU=,iv:XlH149jovjxxwnqr+LCCDGX8W2/MUT7yQtdWsIiJQaw=,tag:VUZWobnuFnuRNo0wYBenqA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
