--- a/argocd/apps/homepage/manifests/config/bookmarks.yaml
+++ b/argocd/apps/homepage/manifests/config/bookmarks.yaml
@@ -1,4 +1,4 @@
-- Developer:
-    - Github:
-        - abbr: GH
-          href: https://github.com/myanello
+# - Developer:
+#     - Github:
+#         - abbr: GH
+#           href: https://github.com/myanello
