--- a/argocd/apps/dollardollar/manifests/deploy.yaml
+++ b/argocd/apps/dollardollar/manifests/deploy.yaml
@@ -6,6 +6,7 @@ metadata:
   name: dollardollar
 spec:
   replicas: 1
+  revisionHistoryLimit: 5
   selector:
     matchLabels:
       app: dollardollar
