--- a/argocd/apps/dollardollar/manifests/deploy.yaml
+++ b/argocd/apps/dollardollar/manifests/deploy.yaml
@@ -37,6 +37,10 @@ spec:
               value: INFO
             - name: FLASK_APP
               value: app.py
+            - name: OIDC_ENABLED
+              value: 'true'
+            - name: OIDC_PROVIDER_NAME
+              value: Authentik
             # - name: SECRET_KEY
             #   valueFrom:
             #     secretKeyRef:
