--- a/argocd/apps/dollardollar/manifests/secrets.yaml
+++ b/argocd/apps/dollardollar/manifests/secrets.yaml
@@ -8,7 +8,7 @@ stringData:
     POSTGRES_PASSWORD: ENC[AES256_GCM,data:4Zlm+tGQKzq0/zrC8uf40GxZRt690wtBDs9Tr+/i6DImPo/Ej1WDcM4eHKI+auu6Pdpu+qeptECLSvjoXK9NSg==,iv:3O+9fDhuLsBltnImTRik6sFyRJrWlu6mv8TQRsZ6NQ8=,tag:DQZjyiobei0pW2/nI+peuQ==,type:str]
     POSTGRES_DB: ENC[AES256_GCM,data:M37yb2vlR+yHs0Yg,iv:G9FPIGAWxPCNfptiah6MyWP1+Fy7i8wxnMVvFh9Mkqg=,tag:Gvd9BEND82F+1o06u88h6g==,type:str]
     SECRET_KEY: ENC[AES256_GCM,data:HsEm2whUp1nl8jkT0MVqN4X3Q5KMm7xrd5ajS6HzHJ4U8uO/AYqrJyrqwEc08xWs48FD8nyWPlrD0NlgwOxFXA==,iv:1/wDJhClJ4D8hNB0HDC71QPsEi3s2gqNt6Fgp6SiBn0=,tag:dEmtJwnstYvR/RKYwdbHAQ==,type:str]
-    OIDC_DISCOVERY_URL: null
+    OIDC_DISCOVERY_URL: ENC[AES256_GCM,data:ssOLHfS5mbZlwEh00Ldp2G66Puy4QmnUIw1Z6BOglYRb5k3JgO/XT3kxcBtNO/ibfyitzmXZxD9lO6nCCVgj27u5czMixk6if1aolfkK5S62yJqs3zBNPVA=,iv:W2795muQ7AVcx+xgmdsf+Zm1jsW1Pm70egvi4nzBjuw=,tag:dPYrGUPNOU541AqsO/+86g==,type:str]
     OIDC_CLIENT_ID: ENC[AES256_GCM,data:T8QmXHXDxP/FshK+1Gp0JrVW4vWcb6hEPQs1aV+kYxYUg+N08KKuMg==,iv:KU0No9TsBClow7tLxYz4rz1d/rwAKl+wEW+G8iAx9bA=,tag:9GJ6Wmre5Jp0Ag0t0ba0ww==,type:str]
     OIDC_CLIENT_SECRET: ENC[AES256_GCM,data:UAqxqGNpUPXqI3CFg/SkIHMBFEREhjmchE/ghxyjmobuMBmyeKaSw2eScQCP2hwfL/CD+tX4yZBi3wAW/+C/Poebr0kehOHRgh9isa32333w+Q0SqubLi7bw+NycsVdnqCqUeRkzTsWscrsNeJrp0x1bp6oTUho24ghDxR0GGJQ=,iv:+6uZRlgTMD6hKl6u7or4OY6GsjSj2J2QwYEbF4yUXvQ=,tag:QeG3Z9VlBUbxza4IWg4/Vw==,type:str]
 sops:
@@ -26,8 +26,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-25T02:27:24Z"
-    mac: ENC[AES256_GCM,data:HmCIAH1MyNXZfgEqBJQ6ugXN7jeCUNl7YJLUc6IQlFRPCxzR74sM/NnkD1RhP3YuwTqxwUyJpjh5AzgCgGRuj8h5S9acAGkE1NR30SnK63FxC6pueMyV2GKD+WOLGiZC/BV3f06q84P/YzRteaz+1bRJSTQ3on0+EuR/8jiGAEQ=,iv:edTModxrmJZWeEqF22aRclOsPgHuTJdoRyIqNQG/Utg=,tag:ro+2YlAdWpI0ZuaQqDXlnQ==,type:str]
+    lastmodified: "2025-03-25T02:28:15Z"
+    mac: ENC[AES256_GCM,data:pXN/MrAyEOWnp6AL9nJ775hsvjJNSGIQjcf+Emn7khmqeYiNxmz5WVQlBZkDrcALY0cKJ2HGHiCoQeUT0B605Zil4q/8AhSqBLMzDx/PfBvEf3Bf7LVn73w+keXh14yLf9x6WWtWYqg5M94JlIREnsFd3VcPgucvTqeOLYNYeRg=,iv:AXU2ECFCXxV9Xd40+/wBjBpZMR/1AgLfCnrxLQ6MM7g=,tag:YNPclW9R/+TBMU/eBq4zoQ==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
