--- a/argocd/apps/dollardollar/manifests/secrets.yaml
+++ b/argocd/apps/dollardollar/manifests/secrets.yaml
@@ -11,6 +11,7 @@ stringData:
     OIDC_DISCOVERY_URL: ENC[AES256_GCM,data:ssOLHfS5mbZlwEh00Ldp2G66Puy4QmnUIw1Z6BOglYRb5k3JgO/XT3kxcBtNO/ibfyitzmXZxD9lO6nCCVgj27u5czMixk6if1aolfkK5S62yJqs3zBNPVA=,iv:W2795muQ7AVcx+xgmdsf+Zm1jsW1Pm70egvi4nzBjuw=,tag:dPYrGUPNOU541AqsO/+86g==,type:str]
     OIDC_CLIENT_ID: ENC[AES256_GCM,data:T8QmXHXDxP/FshK+1Gp0JrVW4vWcb6hEPQs1aV+kYxYUg+N08KKuMg==,iv:KU0No9TsBClow7tLxYz4rz1d/rwAKl+wEW+G8iAx9bA=,tag:9GJ6Wmre5Jp0Ag0t0ba0ww==,type:str]
     OIDC_CLIENT_SECRET: ENC[AES256_GCM,data:UAqxqGNpUPXqI3CFg/SkIHMBFEREhjmchE/ghxyjmobuMBmyeKaSw2eScQCP2hwfL/CD+tX4yZBi3wAW/+C/Poebr0kehOHRgh9isa32333w+Q0SqubLi7bw+NycsVdnqCqUeRkzTsWscrsNeJrp0x1bp6oTUho24ghDxR0GGJQ=,iv:+6uZRlgTMD6hKl6u7or4OY6GsjSj2J2QwYEbF4yUXvQ=,tag:QeG3Z9VlBUbxza4IWg4/Vw==,type:str]
+    OIDC_ISSUER: ENC[AES256_GCM,data:sRUYmuCro3J621rNc7+3vizuVMY9a8RdfXvofno=,iv:eOes/V1IJJXC0XlyaAd2becF6Sd5KeiUokciaI0Tzhs=,tag:3qSVURCdv4V/A0I9AHfv0w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +27,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-25T02:28:15Z"
-    mac: ENC[AES256_GCM,data:pXN/MrAyEOWnp6AL9nJ775hsvjJNSGIQjcf+Emn7khmqeYiNxmz5WVQlBZkDrcALY0cKJ2HGHiCoQeUT0B605Zil4q/8AhSqBLMzDx/PfBvEf3Bf7LVn73w+keXh14yLf9x6WWtWYqg5M94JlIREnsFd3VcPgucvTqeOLYNYeRg=,iv:AXU2ECFCXxV9Xd40+/wBjBpZMR/1AgLfCnrxLQ6MM7g=,tag:YNPclW9R/+TBMU/eBq4zoQ==,type:str]
+    lastmodified: "2025-03-25T02:31:14Z"
+    mac: ENC[AES256_GCM,data:dN5F+qGBGAC+/nbjbCGhRl0iTw0xz9B4WJQRmeKayzt/L5kQQoOnbYqIJC8NbVmk+B7qrWQvmxpTlnZ4EEq7DR2v7Ta0qGd+BHXc4nNxO7bDMdnf7lLZHA5H2abg3XiDiXMR1SxyJ9LkZjJovDzMm6BJyZYVZKvCvug3v8uWZJM=,iv:3wiT81dCWS88WcL/W6uJB67216XAnCRkYiiduHY+IBY=,tag:tknP7F6C6JyFpI3ECdSu6g==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
