dollardollar dev app7

--- a/argocd/apps/dev/dollardollar/manifests/pull-secrets.yaml
+++ b/argocd/apps/dev/dollardollar/manifests/pull-secrets.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
     name: dollardollar-pull-secrets
 type: kubernetes.io/dockerconfigjson
-data: null
-.dockerconfigjson: ENC[AES256_GCM,data:kPQ3zaGXbm6ABmnxzLYFYAbReq8dacUFEQ4QOWP0BSpjG4yPqgQuBKM4A9u7fngs981eKeK7Iwm0uPuIP0pozg7Pwdo/R0gfaYZsSCPSVsHxkWf9Zz493Nzo53tWyCoJcBQ3RuKpC59GCsiVDGCi9xXsP447kLsqUUkHE9Tc8V2EPChs1mx5fGLD5SIxXHyc6Q2Csg4hHmtihBrDUolylm7pQUH4NZWOOmAEYjsGS+IrgnnIXVks6ZG1eOmM7TdS,iv:yInAtH9bxIGL5TZ7+AnkSvN3h1qsxTXXaEEV82sqXJI=,tag://IrZcBzlh8UhS258QhZfw==,type:str]
+data:
+    .dockerconfigjson: ENC[AES256_GCM,data:zH+wDqi5gUOLiC1uteJxtYc2ArdFONYqlorb0s9j5wXD8sTR+012VHpkBbzFAbY7d+8zOHPMa9bXF/vQ1YGbSFh/4thrVYx+G5YBx8HVO7/+VzMagYdhKkaKiamS2wjgVuBUKMq1aD0HqVsuAAfD7HvsyiNJYXSVzLOHqqRSJG1ZDS7yd7q2R65e2duUsQQpTp3mQLLaT/bLsuumtqg2YhLf3HRKFyvuacKnVR8bh8GmRSr/8a9ZihLFoQtd2zwP,iv:HcLD9Ou5fgWVu9WGTzt/m8Wl9V4LeTTZMOzyVsTK848=,tag:VPXI5zgZk1DAtTIpKWSHug==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,8 +20,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-25T19:01:02Z"
-    mac: ENC[AES256_GCM,data:GOvDiF4Rw4wa1zCMj2f4/LDcBjER3CnnSsQA5Q6PEEzHVE38rufV50UcIWw7yOKhq527anf0nI9kCMOaJNenXtHuypk1dEEJeikQ4PzbsgVBbOZXtoFvOUkJmaX3Yx7fkDy/CNJ2w/DQJYJB/tvYImwr8Zoaupis3bdEs1qPky0=,iv:B0vhL6yJSiyT9JfgAl0dUC5LojLkAnMlMLysP6XVGw0=,tag:SyFAzg6xWe7tWiE93AH2uw==,type:str]
+    lastmodified: "2025-03-25T19:06:31Z"
+    mac: ENC[AES256_GCM,data:hLHyj37VHzLnYZjGbonpiUHUjBvgIozBFlQeE+2K2NYgSBTP+XdGTs8IIUiK39W1cbooB9UuZ/xaQi7Blw54Paz18yXnoXVb93ctAqQmSIuJgKqvZd3Iyi0uRucOdocYS7x1dZgtOoNQ8SXaGUMud9lzHWaAUyJVuNv5iM68BE0=,iv:e69E901L3ngfcnzLohIdKW0HzHM6WliPusicZGJ4jNw=,tag:lFym3ZgyKEoM2ahWHUuMbA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
