--- a/argocd/apps/dev/dollardollar/manifests/svc.yaml
+++ b/argocd/apps/dev/dollardollar/manifests/svc.yaml
@@ -2,15 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: dollardollar
-  name: dollardollar
+    app: dollardollar-dev
+  name: dollardollar-dev
 spec:
   ports:
     - name: "http"
       port: 5001
       targetPort: 5001
   selector:
-    app: dollardollar
+    app: dollardollar-dev
 ---
 apiVersion: v1
 kind: Service
