--- a/argocd/apps/dev/dollardollar/manifests/deploy.yaml
+++ b/argocd/apps/dev/dollardollar/manifests/deploy.yaml
@@ -57,7 +57,7 @@ spec:
             # - MAIL_DEFAULT_SENDER=${MAIL_DEFAULT_SENDER}
           image: docker.cloudsmith.io/myanello/apps/dollar:latest
           imagePullSecrets:
-            - name: dollardollar-pull-secrets
+            - name: regcred
           imagePullPolicy: IfNotPresent
           name: dollardollar-dev
           ports:
