--- a/argocd/apps/dev/dollardollar/manifests/svc.yaml
+++ b/argocd/apps/dev/dollardollar/manifests/svc.yaml
@@ -20,6 +20,7 @@ metadata:
     app: postgres
 spec:
   type: LoadBalancer
+  loadBalancerIP: 10.10.8.8
   ports:
     - name: postgres
       port: 5432
