--- a/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
@@ -9,6 +9,8 @@ vmagent:
 vmsingle: 
   enabled: true
   spec:
+    server:
+      retentionPeriod: 50y
     serviceSpec:
       spec:
         type: LoadBalancer
