--- a/argocd/apps/immich/manifests/secret-generator.yaml
+++ b/argocd/apps/immich/manifests/secret-generator.yaml
@@ -1,11 +1,10 @@
 apiVersion: viaduct.ai/v1
 kind: ksops
 metadata:
-  # Specify a name
   name: secret-generator
   annotations:
     config.kubernetes.io/function: |
       exec:
         path: ksops
 files:
-  - manifests/secrets.enc.yaml
+  - manifests/secrets.yaml
