--- a/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
@@ -10,6 +10,15 @@ vmsingle:
   enabled: true
   spec:
     retentionPeriod: 50y
+    extraEnvs:
+      - name: search_cacheTimestampOffset
+        value: "10000h"
+      - name: search_cacheMaxAge
+        value: "360d"
+      - name: influx_databaseNames
+        value: "iotawatt"
+    extraArgs:
+      maxLabelsPerTimeseries: "500"
     serviceSpec:
       spec:
         type: LoadBalancer
